--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/* Animación del salto */
 @keyframes jump {
   0% { bottom: 0; }
   50% { bottom: 80px; }
@@ -5,15 +6,31 @@
 }
 
 #cat {
-  background-color: #ff6600; /* color del gato, o pon una imagen si quieres */
+  background-color: #ff6600; /* Color del gato o una imagen */
   border-radius: 50%;
   width: 50px;
   height: 50px;
   position: absolute;
-  bottom: 0;
+  bottom: 0; /* Empuja al gato al fondo */
   left: 50px;
 }
 
 #cat.jump {
   animation: jump 0.5s ease-out forwards;
+}
+
+#gameContainer {
+  position: relative;
+  width: 100%;
+  height: 200px; /* Ajusta según el tamaño de tu contenedor */
+  background-color: #f0f0f0; /* Fondo del juego */
+}
+
+#obstacle {
+  background-color: #333;
+  width: 30px;
+  height: 50px;
+  position: absolute;
+  right: -30px;
+  bottom: 0;
 }
